--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,21 +3,48 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{{title}}</title>
+    <title>{{ title }}</title>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
-    <a href="/auth/login">Login</a>
-    <a href="/auth/register">Register</a>
-    <a href="/auth/logout">Logout</a>
-    {{#if errors}}
-    <div>
-        {{#each errors}}
-        <p>{{this}}</p>
-        {{/each}}
+
+    <div id="container">
+        {{#if errors}}
+        <div>
+            <div class="notification errorBox">
+                {{#each errors}}
+                <span>{{this}}</span>
+                {{/each}}
+            </div>
+        </div>
+        {{/if}}
+
+        <nav>
+            <div class="left-container">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    {{#if username}}
+                    <li><a href="/hotel/create">Add</a></li>
+                    {{else}}
+                    <li><a href="/auth/login">Login</a></li>
+                    <li><a href="/auth/register">Register</a></li>
+                    {{/if}}
+                </ul>
+            </div>
+            {{#if username}}
+            <div class="right-container">
+                <a href="/profile" class="log-out">{{username}}</a>
+                <a href="/auth/logout" class="log-out">Logout</a>
+            </div>
+            {{/if}}
+        </nav>
+
+        {{{body}}}
+
+        <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
     </div>
-    {{/if}}
-    {{{body}}}
+
 </body>
 
 </html>
