--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,8 +1,14 @@
-<h1>Register Page</h1>
-{{!-- THE FORM MUST HAVE AN ACTION FIELD (and method field="post") THAT REFERS THE USER TO THE CORRECT PATH, E.G. /AUTH/REGISTER  --}}
-<form method="post" action="/auth/register" >
-    <label> Username <input type="text" name="username" value="{{body.username}}"> </label>
-    <label> Password <input type="password" name="password"> </label>
-    <label> Repass: <input type="password" name="repass"> </label>
-    <button>Register</button>
-</form>
+<section id="viewRegister">
+    <h2>Create your account:</h2>
+    <form id="formRegister" method="post" action="/auth/register">
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email" placeholder="Email" value="{{body.email}}">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Enter your Username" value="{{body.username   }}">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Password">
+        <label for="rePassword">Repeat Password:</label>
+        <input type="password" id="rePassword" name="repass" placeholder="Repeat Password">
+        <input type="submit" class="register" value="Register">
+    </form>
+</section>
