--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,16 +1,17 @@
 <section id="viewAddhotel">
     <h2>Edit existing hotel</h2>
-    <form id="formAddhotel">
+    {{#with hotel}}
+    <form id="formAddhotel" method="post" action="/hotel/{{_id}}/edit">
         <label for="hotel">Hotel name:</label>
-        <input type="text" id="hotel" name="hotel" value="Auckland Inn">
+        <input type="text" id="hotel" name="name" value="{{name}}">
         <label for="city">City:</label>
-        <input type="text" id="city" name="city" value="Auckland">
+        <input type="text" id="city" name="city" value="{{city}}">
         <label for="free-rooms">Free rooms:</label>
-        <input type="number" id="free-rooms" name="free-rooms" value="43">
+        <input type="number" id="free-rooms" name="rooms" value="{{rooms}}">
         <label for="imgUrl">Image:</label>
-        <input type="text" id="imgUrl" name="imgUrl"
-            value="https://image.freepik.com/free-vector/flat-hotel-building-town_52683-10040.jpg">
+        <input type="text" id="imgUrl" name="imageUrl" value="{{imageUrl}}">
 
         <input type="submit" class="create" value="Add">
     </form>
+    {{/with}}
 </section>
