--- a/views/details.hbs
+++ b/views/details.hbs
@@ -18,8 +18,11 @@
             <a href="/hotel/{{_id}}/edit" class="edit">Edit</a>
             <a href="/hotel/{{_id}}/delete" class="remove">Delete</a>
             {{else}}
-            <p><span class="green">You already have booked a room</span> </p>
-            <a href="/hotel/{{_id}}/book" class="book">Book</a>
+                {{#if isBooked}}
+                <p><span class="green">You already have booked a room</span> </p>
+                {{else}}
+                <a href="/hotel/{{_id}}/book" class="book">Book</a>
+                {{/if}}
             {{/if}}
         </div>
 
